# totp3

./: CMakeLists.txt  README.md  env_dhc.yml  fwd.txt
config/: test.yaml
config/manipulator/: TEST_INTERFACE.yaml
config/manipulator/motion/: singularitytest.yaml  test_motion.yaml
matlab/: LeftArmTimedFrontPlaces.txt  example_path_1.txt  example_path_1_new.txt  example_path_2_through_singularity.txt  example_path_2_through_singularity_new.txt  joint_example_path_1.txt  joint_example_path_2.txt  leftarmtimedfrontplaces.txt  leftarmtimedfrontplaces10.txt  leftarmtimedfrontplaces2.txt  leftarmtimedfrontplaces6.txt  leftarmtimedfrontplaces_q.txt
matlab/topt/singularity_data/: av.txt  b.txt  ddq.txt  dq.txt  g.txt  m.txt  q.txt  test_EE.txt  test_q.txt  test_qddot.txt  test_qdot.txt  test_trq.txt  tl.txt  topt_dqds.txt  topt_dqdt.txt  topt_s.txt  topt_sdot.txt  tu.txt  v2.txt
robot_description/RS013N/: rs013n.urdf
robot_description/RS020N/: rs020n_maxtrq.urdf  rs020n_nomesh.urdf  rs020n_nospecs.urdf  rs020n_ratedtrq.urdf
robot_description/RS020N/meshes/: 1006041_A_2.stl  RS020N-J4.mtl
robot_description/conveyor/: conveyor.urdf
robot_description/table/: table.urdf
scripts/: create_conda_env.sh  create_conda_env_manual_minimal.sh  create_conda_env_manual_py307.sh  create_conda_env_manual_py308.sh  create_conda_env_manual_py310.sh  install_dependencies.sh  install_eigenpy_from_src.sh  install_pinocchio_from_src.sh
src/bindings/dhc/: CMakeLists.txt  dhc_interface_pybind.cpp
src/controller/: CMakeLists.txt
src/controller/dhc/: controller.hpp  interface.hpp  planner.hpp  user_command.hpp
src/controller/dhc/topt/: robot_manager.cpp  robot_manager.hpp  test_controller.cpp  test_controller.hpp  test_interface.cpp  test_interface.hpp  topt_planner.cpp  topt_planner.hpp  topt_solver.cpp  topt_solver.hpp  topt_utils.hpp  trajectory_manager.cpp  trajectory_manager.hpp
src/controller/my_robot_system/: robot_system.cpp  robot_system.hpp
src/controller/my_robot_system/testrobotinfo/: rs020n7dofl_definition.hpp  rs020n_definition.hpp
src/pyscripts/: main_getmaxload.py
src/rossy_utils/: CMakeLists.txt  config.h.cmake
src/rossy_utils/io/: io_utilities.cpp  io_utilities.hpp
src/rossy_utils/math/: hermite_curve.cpp  hermite_curve.hpp  hermite_quintic_splines.cpp  hermite_quintic_splines.hpp  liegroup_utilities.cpp  liegroup_utilities.hpp  low_pass_filter.h  lp_solver.cpp  lp_solver.hpp  math_utilities.cpp  math_utilities.hpp  minjerk_one_dim.cpp  minjerk_one_dim.hpp  natural_cubic_splines.cpp  natural_cubic_splines.hpp  natural_quartic_splines.cpp  natural_quartic_splines.hpp  natural_spline_types.hpp  natural_vcquartic_splines.cpp  natural_vcquartic_splines.hpp  path_hermite_splines.cpp  path_hermite_splines.hpp  path_paramerization_splines.cpp  path_paramerization_splines.hpp  pseudo_inverse.cpp  pseudo_inverse.hpp  simple_kalman_filter.h
src/simulator/: CMakeLists.txt  main.py  main_pybullet.py  main_pybullet_test.py  test_pybind.py
src/simulator/config/: pybullet_configuration.py  pybullet_motion.py  pybullet_motion_random.py
src/simulator/src/: main.cpp  main_test.cpp
src/simulator/utils/: pybullet_simulator.py  pybullet_util.py
